test/functional/failtests/classes/assignToMethod.txt
TypeError: Attempted to assign a value to a class method, which is not allowed.
6 |     var x = new Foo();
7 |     x.test = func() {};
  |     ^ (7:5)
8 | }

